Update title and restructure HTML layout

--- a/index.html
+++ b/index.html
@@ -2,29 +2,27 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Natio Station</title>
+    <title>Natio Station – La voz oficial de Natio States</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <header>
-        <img src="logo.png" class="logo">
-        <h2 class="lema">Natio Station – La voz oficial de Natio States</h2>
-    </header>
+<header>
+    <img src="logo.png" class="logo">
+    <h2 class="lema">Natio Station – La voz oficial de Natio States</h2>
+</header>
 
-    <main>
-        <div class="player-box">
-            <button id="playBtn" class="play-btn">▶</button>
+<div class="player-box">
+    <button id="playBtn" class="play-btn">▶</button>
 
-            <h3 id="songTitle" class="song-title">Cargando...</h3>
-            <p id="songGenre" class="song-genre">---</p>
-        </div>
-    </main>
+    <h3 id="songTitle" class="song-title">Cargando...</h3>
+    <p id="songGenre" class="song-genre">---</p>
+</div>
 
-    <audio id="player" preload="auto"></audio>
-    <audio id="publiPlayer" preload="auto"></audio>
+<audio id="player"></audio>
+<audio id="publiPlayer"></audio>
 
-    <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
